---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Modules:


# Input:
class T:
  b = 0
class U:
  a = T()
v := U(a=T(b=10))
print ?v.a.b


# Result (success):
none

# Stdout:
10


